--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/themes": "^3.2.1",
     "@tmcw/togeojson": "^7.1.2",
     "cesium": "^1.136.0",
     "firebase": "^12.7.0",
