fancy timeline eclipse lighting effects shadows poi stuff working properly

--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,16 @@
   "dependencies": {
     "@radix-ui/themes": "^3.2.1",
     "@tmcw/togeojson": "^7.1.2",
+    "@visx/axis": "^4.0.0-alpha.0",
+    "@visx/event": "^4.0.0-alpha.0",
+    "@visx/gradient": "^4.0.0-alpha.0",
+    "@visx/group": "^4.0.0-alpha.0",
+    "@visx/responsive": "^4.0.0-alpha.0",
+    "@visx/scale": "^4.0.0-alpha.0",
+    "@visx/shape": "^4.0.0-alpha.0",
+    "@visx/text": "^4.0.0-alpha.0",
+    "@visx/tooltip": "^4.0.0-alpha.0",
+    "astronomy-engine": "^2.1.19",
     "cesium": "^1.136.0",
     "firebase": "^12.7.0",
     "gpxparser": "^3.0.8",
