--- a/extension/package.json
+++ b/extension/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wxt-react-starter",
+  "name": "ekleipsis-extension",
   "description": "manifest.json description",
   "private": true,
   "version": "0.0.0",
@@ -15,6 +15,8 @@
     "postinstall": "wxt prepare"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/themes": "^3.2.1",
     "react": "^19.2.3",
     "react-dom": "^19.2.3"
   },
