--- a/extension/package.json
+++ b/extension/package.json
@@ -18,7 +18,8 @@
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/themes": "^3.2.1",
     "react": "^19.2.3",
-    "react-dom": "^19.2.3"
+    "react-dom": "^19.2.3",
+    "firebase": "^12.7.0"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.3.10",
