--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/themes": "^3.2.1",
     "@tmcw/togeojson": "^7.1.2",
     "@visx/axis": "^4.0.0-alpha.0",
