--- a/app/package.json
+++ b/app/package.json
@@ -29,7 +29,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "resium": "^1.19.2",
-    "vite-plugin-cesium": "^1.2.23"
+    "vite-plugin-static-copy": "^3.1.4"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.3.10",
