--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   ],
   "scripts": {
     "dev": "npm run dev -w app",
+		"lint": "biome check . --fix",
     "build": "npm run build -w app",
     "check-types": "npm run build -w app",
     "dev:extension": "npm run dev -w extension",
